@@ -1,3 +1,8 @@
+2007-06-25  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Change: src/kahua/persistence/dbi.scm
+	  Fit to 2007-06-19 change.
+
 2007-06-20  Tatsuya BIZENN  <bizenn@arthub.net>
 
 	* Change: src/kahua/dbm.scm
